# word2vec

./: .gitignore  README.md  pyproject.toml
notebooks/: embedding_visualization.ipynb  evaluation_benchmark.ipynb  hyperparameter_optimization.ipynb
src/word2vec/: __init__.py  __main__.py  model.py  preprocessing.py  training.py
tests/: test_model.py  test_preprocessing.py  test_training.py
