[project]
name = "word2vec"
version = "0.1.0"
description = "Word2Vec Skip-Gram with Negative Sampling in pure NumPy"
readme = "README.md"
authors = [
    { name = "Oliwier Szypczyn", email = "oli.szypczyn@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numba>=0.61",
    "numpy>=2.0",
    "rich>=14.3.3",
    "tqdm>=4.67.3",
    "typer>=0.24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]
notebook = [
    "matplotlib>=3.9",
    "scikit-learn>=1.5",
    "jupyter>=1.0",
    "optuna>=4.0",
    "pandas>=2.2",
    "scipy>=1.14",
    "seaborn>=0.13",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 99
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
